<resources>
    <string name="app_name">Radio Kalmykia</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="logo">Logo</string>
    <string name="contact_text">Контакты</string>
    <string name="about_text">История</string>
    <string name="main_text">Главная</string>
    <string name="logo_app_1">Радио</string>
    <string name="logo_app_2">России</string>
    <string name="history_text_1">Говорит Элиста! Калмыцкое Радио начинает свою программу...
Впервые эти позывные прозвучали в 1935 году. Тогда было подписано постановление о создании комитета по радиофикации и радиовещанию калмыцкой автономной области. Первым председателем радиокомитета в 1935 году стал Семен Махлис, а первым диктором на калмыцком языке поэт Михаил Хонинов. Калмыцкое радио не прекращало работы даже в годы войны. Только 12 августа 42-го, когда враг был уже на подступах Элисты, сотрудники передали последнее сообщение. Тогда все оборудование было вывезено в Астрахань. На этапе становления с Калмыцким радио активно сотрудничали поэты Хасыр Сян - Бельгин, Сангаджи Каляев, которые выступали с чтением своих стихов. Благодаря радио широкую известность в республике получило творчество сельской учительницы Приволжской школы Долбанского района Улан Лиджиевой – впоследствии знаменитой певицы, Заслуженной артистки РСФСР и Народной артистки России, восторженно принимали радиослушатели каждую песню в исполнении «Степного Жаворонка» Валентины Ильцарановой и многих других именитых калмыцких артистов. Сегодня в эфире Радио Калмыкии звучат уже новые имена! Сейчас служба радиовещания – это не только самые свежие новости и общение со слушателями в прямом эфире, это обсуждение самых актуальных тем, обратная связь с помощью современных цифровых технологий. Это огромный вклад национального вещания радио в сохранение и развитие калмыцкого языка. 50 процентов регионального вещания – составляют новости и тематические передачи на калмыцком языке. Сегодня в фондах Радио Калмыкии хранятся уникальные записи, начиная с 30-х годов прошлого века и до нынешнего времени. На сегодня слушательская аудитория Радио Калмыкии - это вся республика. Радио Калмыкии вещает на двух каналах Радио России и МАЯК на ФМ – частотах, в цифровом формате и проводном радио. В коллективе 13 человек: журналисты, звукорежиссеры, инженеры. С позывных радио Калмыкии начинается утро жителей республики. Радио Калмыкии: Однажды и навсегда!</string>
    <string name="history_app_1">Говорит</string>
    <string name="history_app_2">Элиста!</string>
</resources>