<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBgColor"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:background="@color/asideBgColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/contacts"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:fontFamily="@font/montserrat_subrayada"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/contact_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about" />

        <TextView
            android:id="@+id/about"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:fontFamily="@font/montserrat_subrayada"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/about_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main" />

        <TextView
            android:id="@+id/main"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_subrayada_bold"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/main_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewLogo_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/montserrat_subrayada"
        android:text="@string/logo_app_1"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLogo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/montserrat_subrayada_bold"
        android:text="@string/logo_app_2"
        android:textColor="#011B9E"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/textViewLogo_1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="49dp"
        android:layout_height="71dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/play_pause_svgrepo_com" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="217dp"
        android:layout_height="216dp"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <!--    <com.google.android.material.appbar.AppBarLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:theme="@style/Theme.RadioKalmykia.AppBarOverlay">-->

    <!--&lt;!&ndash;        <androidx.appcompat.widget.Toolbar&ndash;&gt;-->
    <!--&lt;!&ndash;            android:id="@+id/toolbar"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:layout_height="?attr/actionBarSize"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:background="?attr/colorPrimary"&ndash;&gt;-->
    <!--&lt;!&ndash;            app:popupTheme="@style/Theme.RadioKalmykia.PopupOverlay" />&ndash;&gt;-->

    <!--    </com.google.android.material.appbar.AppBarLayout>-->

    <!--    <include layout="@layout/content_main" />-->

    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
    <!--        android:id="@+id/fab"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="bottom|end"-->
    <!--        android:layout_marginEnd="@dimen/fab_margin"-->
    <!--        android:layout_marginBottom="16dp"-->
    <!--        app:srcCompat="@android:drawable/ic_dialog_email" />-->

</androidx.constraintlayout.widget.ConstraintLayout>